--- a/web_root/index.html
+++ b/web_root/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <title>index</title>
+</head>
 <body>
-
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
-
+<h1>200</h1>
+<p>index.html</p>
 </body>
 </html>
